--- a/assets/css/flaticon.css
+++ b/assets/css/flaticon.css
@@ -43,3 +43,4 @@
 .fa-twitter:before { content: "\f099";}
 .fa-pinterest:before {content: "\f0d2";}
 .fa-youtube-play:before {content: "\f16a";}
+.fa-check:before {content: "\f00c"; color:#34c505;}
