--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -844,7 +844,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 
 a:hover {
-    color: #a3d4ff;
+    color: #0060c7;
 }
 
 li a i:hover {
@@ -883,5 +883,26 @@ li a i:hover {
 @keyframes example {
     0%   {bottom:0px;}
     100%  {bottom:7px;}
+}
+
+a:hover, a:focus {
+    background-size: 0 0.1em, 100% 0.1em;
+}
+
+a {
+    background: linear-gradient(to right, rgb(25 134 249 / 33%), rgb(123 175 231 / 0%)), linear-gradient(to right, rgb(0 77 159), rgb(0 67 139), rgba(0, 100, 200, 1));
+    background-size: 100% 0.1em, 0 0.1em;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+}
+
+.header-text a:hover{
+	color:#fff;
+	background: linear-gradient(to right, rgb(25 134 249 / 33%), rgb(123 175 231 / 0%)), linear-gradient(to right, rgb(0 77 159), rgb(0 67 139), rgba(0, 100, 200, 1));
+    background-size: 100% 0.1em, 0 0.1em;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
 }
 /*========================Thank you=================
