--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -905,4 +905,31 @@ a {
     background-repeat: no-repeat;
     transition: background-size 400ms;
 }
+
+
+.random-content-box {
+   
+    margin-bottom: 30px;
+	margin-top: 30px;
+	
+}
+
+p#random-content {
+     text-align: center; 
+    /* padding: 6px; */
+   
+}
+.random-content-box button {
+    margin-top: 10px;
+}
+
+.quote {
+    /* border: blue; */
+    background: blue;
+    color: #fff;
+    border-radius: 7px;
+	padding: 8px;
+	margin-top:25%;
+
+}
 /*========================Thank you=================
