--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ h1,h2,h3,h4,h5,h6 {
 p {
 	margin: 0;
 	line-height:1.8;
-	color:#43485c;
+	color:#131414 !important;
 	font-size:14px;
 	font-family: 'Poppins', sans-serif;
 }
@@ -255,7 +255,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #007bff;}
 }
 .single-about-txt p {
     font-size: 16px;
-    color: #999fb3;
+    color: #6f6f6f;
     padding: 35px 0 43px;
     border-bottom: 1px solid #999fb3;
 }
