--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,6 +389,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     text-transform: uppercase;
     padding-bottom: 50px;
     border-bottom: 1px solid #e5ebf2;
+	text-align:center;
 	
 }
 .single-progress-txt {
